syntax = "proto3";

option go_package = "./proto";

service AuthenticationService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
}

message LoginRequest {
    string email    = 1;
    string password = 2;
}

message LoginResponse {
    string first_name   = 1;
    string last_name    = 2;
    string email        = 3;
    bool active         = 4;
    bool admin          = 5;
    string token        = 6;
}

message SignUpRequest {
    string first_name   = 1;
    string last_name    = 2;
    string password     = 3;
    string email        = 4;
}

message SignUpResponse {
    string email = 1;
}
